# mlx-lattice

./: .clang-format  .clang-tidy  .clangd  .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  parity.yml  publish.yml  quality.yml
benchmarks/: README.md  bench_sparse_ops.py  pyproject.toml
benchmarks/mlx_lattice_bench/: console.py  datasets.py  harness.py  report.py  run.py
conformance/: pyproject.toml
conformance/lattice_conformance/: __init__.py  archive.py  cli.py  gameleon_geometry.py  metrics.py  replay.py
contract/: README.md  pyproject.toml
contract/lattice_contract/: __init__.py  artifact.py  dialect.py  kernel.py  ops.py  reference.py  schema.py
contract/lattice_contract/mlir/: __init__.py  builder.py
contract/tests/: test_contract_manifest.py  test_contract_surface.py  test_kernel.py  test_mlir_builder.py  test_reference.py
docs/: conf.py  index.rst
docs/api/: artifact.rst  index.rst  ir.rst  native.rst
docs/getting-started/: installation.rst  quickstart.rst
docs/project/: caveats.rst  stability.rst
mlir/: CMakeLists.txt  README.md
mlir/include/Lattice/Dialect/Lattice/IR/: CMakeLists.txt  LatticeArtifact.h  LatticeAttrs.h  LatticeAttrs.td  LatticeDialect.h  LatticeDialect.td  LatticeOps.h  LatticeOps.td  LatticeTypes.h  LatticeTypes.td
mlir/lib/Dialect/Lattice/IR/: CMakeLists.txt  LatticeArtifact.cpp  LatticeDialect.cpp  LatticeOps.cpp
mlir/test/Dialect/Lattice/: README.md  check_fixtures.sh
mlir/test/Dialect/Lattice/invalid/: activation_bad_kind.mlir  activation_bad_rank.mlir  conv_bad_bias_family.mlir  conv_bad_weight_layout.mlir  devoxelize_bad_interpolation.mlir  empty_entry_return.mlir  generative_with_padding.mlir  global_pool_bad_batch_size.mlir  missing_entry_function.mlir  missing_ir_version.mlir  missing_weight_file.mlir  multiple_entry_functions.mlir  non_lattice_entry_op.mlir  norm_bad_eps.mlir  norm_bad_weight_family.mlir  normalized_conv_bad_eps.mlir  pool_bad_mode.mlir  pool_transpose_bad_stride.mlir  quantized_conv_op_rejected.mlir  sparse_binary_bad_op.mlir  sparse_make_bad_coords.mlir  sparse_reindex_bad_result_dtype.mlir  subm_with_stride.mlir  target_normalized_conv_transpose_bad_eps.mlir  trilinear_upsample_bad_stride.mlir  unsupported_ir_version.mlir  unsupported_weight_file.mlir  voxelize_bad_points.mlir  wrong_entry_name.mlir
mlir/test/Dialect/Lattice/valid/: conv3d_basic.mlir  conv3d_with_bias.mlir  conv_transpose3d_basic.mlir  devoxelize_basic.mlir  feature_activation_with_sparse_identity.mlir  feature_linear_with_sparse_identity.mlir  feature_norm_with_sparse_identity.mlir  generative_conv_transpose3d_basic.mlir  global_pool_basic.mlir  normalized_subm_conv3d_basic.mlir  pool3d_basic.mlir  pool_transpose3d_target.mlir  quantized_weight_conv3d.mlir  sparse_add_outer.mlir  sparse_binary_outer.mlir  sparse_cat_outer.mlir  sparse_reindex.mlir  subm_conv3d_basic.mlir  target_conv3d_basic.mlir  target_normalized_conv_transpose3d.mlir  trilinear_upsample3d_target.mlir  voxelize_basic.mlir
mlir/tools/lattice-opt/: CMakeLists.txt  lattice-opt.cpp
mlx_lattice/: __init__.py  _ext.pyi  _native.py  coords.py  tensor.py
mlx_lattice/_ops/: conv.py  pool.py  tensor.py
mlx_lattice/artifact/: __init__.py  bindings.py  builder.py  io.py  lowering.py  model.py  ops.py  plan.py  registry.py  runtime.py  validation.py
mlx_lattice/core/: __init__.py  tensor.py
mlx_lattice/nn/: __init__.py  _artifact.py  conv.py  feature.py  pool.py  quantized_conv.py  quantized_feature.py
mlx_lattice/ops/: __init__.py  _exec.py  _projection.py  _quantized.py  _relation_exec.py  conv.py  coords.py  elementwise.py  entropy.py  exec.py  feature.py  maps.py  pool.py  quantization.py  relations.py  tensor.py
native/: CMakeLists.txt  bindings.cpp
native/backends/: CMakeLists.txt  gpu.cpp  gpu.h
native/backends/cpu/: CMakeLists.txt  conv3d.h  conv3d_pool.cpp  coords.cpp  coords.h
native/backends/cpu/conv/: algorithms.cpp  algorithms.h
native/backends/cpu/coords/: algorithms.cpp  algorithms.h
native/backends/cpu/exec/: algorithms.cpp  algorithms.h  planning.cpp  planning.h
native/backends/cpu/pool/: algorithms.cpp  algorithms.h  planning.cpp  planning.h
native/backends/cuda/: CMakeLists.txt  README.md  conv3d.cu  conv3d.h  conv3d_kernels.cuh  coords.cu  coords.h  runtime_utils.h  stub.cpp
native/backends/cuda/conv/: kernels.cu  kernels.cuh  runtime.cpp  runtime.cu  runtime.h
native/backends/cuda/coords/: kernels.cu  kernels.cuh  runtime.cpp  runtime.cu  runtime.h
native/backends/cuda/pool/: kernels.cu  kernels.cuh  runtime.cpp  runtime.cu  runtime.h
native/backends/metal/: CMakeLists.txt  conv3d.h  conv3d.metal  conv3d_pool.cpp  coords.cpp  coords.h  coords.metal  runtime_utils.cpp  runtime_utils.h
native/backends/metal/conv/: dense_kernels.metal  kernels.metal  runtime.cpp  runtime.h
native/backends/metal/coords/: common.metal  hash.metal  kernels.metal  quantization.metal  runtime.cpp  runtime.h  set.metal
native/backends/metal/exec/: common.metal  kernels.metal  runtime.cpp  runtime.h
native/backends/metal/pool/: autodiff.metal  common.metal  forward.metal  runtime.cpp  runtime.h  topology.metal
native/backends/metal/tensor_ops/conv/forward/: contract.metal  runtime.cpp  runtime.h
native/backends/metal/tensor_ops/conv/input_grad/: runtime.cpp  runtime.h
native/backends/metal/tensor_ops/conv/weight_grad/: contract.metal  reduce.metal  runtime.cpp
native/bindings/: CMakeLists.txt  array_arg.h  (+9 more)
native/lattice/: CMakeLists.txt  arithmetic.cpp  arithmetic.h  runtime.cpp  runtime.h
references/: mlir_lattice_dialect_direction.md  mlir_lattice_dialect_v0.md
scripts/: build-wheels.sh  check-release-version.py  collect-distributions.sh
src/mlx_lattice_cuda13/: pyproject.toml
tests/: conftest.py  support.py  test_backend_parity.py  test_conv.py  test_coords.py  test_feature.py  test_maps.py  test_native_slice.py  test_nn.py  test_point.py  test_pool.py  test_tensor.py
tools/: check_lattice_fuzz_fixtures.py
(+249 files in other folders)
