[project]
name = "mlx-lattice"
version = "0.1.0"
description = "Sparse point cloud convolution library for MLX"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Yu", email = "i@letter.cafe" }]
dependencies = []

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff>=0.15.15", "ty>=0.0.40"]

[tool.ruff]
line-length = 76
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "SIM", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.ty.rules]
unused-ignore-comment = "warn"
redundant-cast = "warn"
