# MARK: - metadata
[project]
name = "mlx-lattice"
version = "0.3.1"
description = "Sparse point cloud convolution library for MLX"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Z.Y. Lin", email = "me@iki.moe" }]
keywords = ["mlx", "ml", "sparse", "convolution", "point-cloud"]
dependencies = ["lattice-contract>=0.3.1,<0.4", "mlx==0.31.2"]

[project.urls]
Homepage = "https://github.com/caelyreth/mlx-lattice"
Repository = "https://github.com/caelyreth/mlx-lattice.git"
Issues = "https://github.com/caelyreth/mlx-lattice/issues"
Changelog = "https://github.com/caelyreth/mlx-lattice/releases"

[build-system]
requires = ["scikit-build-core>=0.12", "nanobind==2.12.0", "mlx==0.31.2"]
build-backend = "scikit_build_core.build"

# MARK: - deps

[tool.uv.workspace]
members = ["benchmarks", "conformance", "contract"]

[tool.uv.sources]
lattice-contract = { workspace = true }

[dependency-groups]
dev = [
  "nanobind==2.12.0",
  "prek>=0.4.3",
  "pytest>=8",
  "ruff>=0.15.15",
  "ty>=0.0.42",
]
docs = [
    "furo>=2025.12.19",
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.12.0",
    "sphinx-copybutton>=0.5.2",
]

# MARK: - build

[tool.scikit-build]
minimum-version = "0.12"
build-dir = "build/{state}-{wheel_tag}"
wheel.packages = ["mlx_lattice"]
sdist.include = [
  "CMakeLists.txt",
  "CMakePresets.json",
  "contract/**/*.py",
  "contract/**/*.toml",
  "contract/**/py.typed",
  "mlx_lattice/**/*.py",
  "mlx_lattice/py.typed",
  "mlir/**",
  "native/**",
  "tests/**/*.py",
]
sdist.exclude = [
  ".DS_Store",
  ".ruff_cache/**",
  ".pytest_cache/**",
  "build/**",
  "dist/**",
  "**/.DS_Store",
  "**/*.pyc",
  "**/*.pyo",
  "**/__pycache__",
  "**/__pycache__/**",
  "mlx_lattice/**/__pycache__",
  "mlx_lattice/**/__pycache__/**",
]

# MARK: - fmt + lint

[tool.ruff]
line-length = 76
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "SIM", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.ty.rules]
unused-ignore-comment = "warn"
redundant-cast = "warn"

[tool.ty.environment]
extra-paths = ["benchmarks", "conformance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["benchmarks", "conformance"]
addopts = "-ra"
