[project]
name = "lattice-contract"
version = "0.5.0"
description = "Backend-neutral sparse lattice artifact contract"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Z.Y. Lin", email = "me@iki.moe" }]
keywords = ["sparse", "lattice", "ir", "model-artifact"]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.15.15", "ty>=0.0.42"]

[tool.hatch.build.targets.wheel]
packages = ["lattice_contract"]

[tool.ruff]
line-length = 76
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "SIM", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
