[project]
name = "mlx-lattice-cuda13"
version = "0.1.7"
description = "CUDA 13 backend for mlx-lattice"
readme = "../../README.md"
requires-python = ">=3.12"
authors = [{ name = "Yu", email = "i@letter.cafe" }]
dependencies = [
  "mlx[cuda13]>=0.31; platform_system == 'Linux'",
]

[project.urls]
Homepage = "https://github.com/utakotoba/mlx-lattice"
Repository = "https://github.com/utakotoba/mlx-lattice.git"
Issues = "https://github.com/utakotoba/mlx-lattice/issues"
Changelog = "https://github.com/utakotoba/mlx-lattice/releases"

[build-system]
requires = [
  "scikit-build-core>=0.12",
  "nanobind>=2",
  "mlx[cuda13]>=0.31; platform_system == 'Linux'",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.12"
cmake.source-dir = "../.."
build-dir = "../../build/cuda13/{wheel_tag}"
wheel.packages = ["."]
wheel.platlib = true

[tool.scikit-build.cmake.define]
MLX_LATTICE_EXTENSION_DESTINATION = "mlx_lattice_cuda13"
MLX_LATTICE_REQUIRE_CUDA = "ON"
MLX_LATTICE_BUILD_CUDA = "ON"
MLX_LATTICE_BUILD_METAL = "OFF"
